--- a/include/core/Config/Config.inc.in
+++ b/include/core/Config/Config.inc.in
@@ -27,11 +27,11 @@
 
 #define EXI_BUILD_TYPE @CMAKE_BUILD_TYPE@
 
-#define EXI_ANSI @EXI_ANSI@
-#define EXI_DEBUG @EXI_DEBUG@
-#define EXI_INVARIANTS @EXI_INVARIANTS@
-#define EXI_USE_THREADS @EXI_USE_THREADS@
-#define EXI_USE_MIMALLOC @EXI_USE_MIMALLOC@
+#cmakedefine01 EXI_ANSI
+#cmakedefine01 EXI_DEBUG
+#cmakedefine01 EXI_INVARIANTS
+#cmakedefine01 EXI_USE_THREADS
+#cmakedefine01 EXI_USE_MIMALLOC
 
-#define EXI_ON_WIN32 @EXI_ON_WIN32@
-#define EXI_ON_UNIX @EXI_ON_UNIX@
+#cmakedefine01 EXI_ON_WIN32
+#cmakedefine01 EXI_ON_UNIX
