--- a/include/core/Config/Config.inc.in
+++ b/include/core/Config/Config.inc.in
@@ -24,16 +24,29 @@
 #define EXI_VERSION_MAJOR @EXI_VERSION_MAJOR@
 #define EXI_VERSION_MINOR @EXI_VERSION_MINOR@
 #define EXI_VERSION_PATCH @EXI_VERSION_PATCH@
+#define EXI_BUILD_TYPE    @CMAKE_BUILD_TYPE@
 
-#define EXI_BUILD_TYPE @CMAKE_BUILD_TYPE@
+#define EXI_VERSION_STRING "@EXI_VERSION@"
+#define EXI_BUILD_STRING   "@CMAKE_BUILD_TYPE@"
 
-#cmakedefine01 EXI_ANSI
-#cmakedefine01 EXI_DEBUG
-#cmakedefine01 EXI_INVARIANTS
+#cmakedefine01 EXI_EXCEPTIONS
 #cmakedefine01 EXI_USE_THREADS
 #cmakedefine01 EXI_USE_MIMALLOC
+
+#cmakedefine01 EXI_DEBUG
+#cmakedefine01 EXI_INVARIANTS
+#cmakedefine01 EXI_LOGGING
+#cmakedefine01 EXI_ENABLE_DUMP
+
+#cmakedefine01 EXI_FAST_DEBUG
+#cmakedefine01 EXI_ENABLE_EXPENSIVE_CHECKS
+#cmakedefine01 EXI_OPTIMIZE_UNREACHABLE
 
 #cmakedefine01 EXI_ON_WIN32
 #cmakedefine01 EXI_ON_UNIX
 
-#cmakedefine01 EXI_ENABLE_DUMP
+#define EXI_ANSI 1
+
+#if EXI_ENABLE_EXPENSIVE_CHECKS
+# define EXPENSIVE_CHECKS
+#endif
