--- a/include/core/Config/Config.inc.in
+++ b/include/core/Config/Config.inc.in
@@ -36,7 +36,9 @@
 #cmakedefine01 EXI_DEBUG
 #cmakedefine01 EXI_INVARIANTS
 #cmakedefine01 EXI_LOGGING
+
 #cmakedefine01 EXI_ENABLE_DUMP
+#cmakedefine01 EXI_ENABLE_NODISCARD
 
 #cmakedefine01 EXI_FAST_DEBUG
 #cmakedefine01 EXI_ENABLE_EXPENSIVE_CHECKS
@@ -50,3 +52,5 @@
 #if EXI_ENABLE_EXPENSIVE_CHECKS
 # define EXPENSIVE_CHECKS
 #endif
+
+#define EXI_STRICT_NODISCARD EXI_ENABLE_NODISCARD
