Move to old for exip version

--- a/vendored/rapidxml/CMakeLists.txt
+++ b/vendored/rapidxml/CMakeLists.txt
@@ -2,10 +2,14 @@ include_guard(DIRECTORY)
 
 project(
   rapidxml
-  VERSION 1.13.0
+  VERSION 1.13.1
   LANGUAGES CXX
 )
 
 add_library(rapidxml INTERFACE)
 add_library(rapidxml::rapidxml ALIAS rapidxml)
-target_include_directories(rapidxml INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+if(EXI_USE_EXIP)
+  target_include_directories(rapidxml INTERFACE old)
+else()
+  target_include_directories(rapidxml INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+endif()
