--- a/include/core/CMakeLists.txt
+++ b/include/core/CMakeLists.txt
@@ -3,3 +3,4 @@ include(ConfigureFiles)
 
 configure_inline(Config/Config.inc.in @ONLY)
 configure_inline(Config/ABIBreak.inc.in @ONLY)
+configure_inline(Config/XML.inc.in @ONLY)
