Change log messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,9 +106,8 @@ endif()
 
 message(STATUS "[exicpp] Tests: ${EXI_TESTS}")
 message(STATUS "[exicpp] Invariants: ${EXI_INVARIANTS}")
-message(STATUS "[exicpp] Debug printing: ${EXI_DEBUG}")
-message(STATUS "[exicpp] ANSI printing: ${EXI_ANSI}")
 message(STATUS "[exicpp] Exceptions: ${EXI_EXCEPTIONS}")
+message(STATUS "[exicpp] Logging: ${EXI_LOGGING}")
 if(EXI_USE_MIMALLOC)
   message(STATUS "[exicpp] Allocator: mimalloc")
 else()
