Add thai example

--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -1,11 +1,17 @@
 /*.exi
 
+!/ThaiNoopt.exi
+!/ThaiNooptB.exi
+
 !/SpecExample.exi
 !/SpecExampleB.exi
+
 !/BasicNoopt.exi
 !/BasicNooptB.exi
+
 !/CustomersNoopt.exi
 !/CustomersNooptB.exi
+
 !/Orders.exi
 !/LineItem.exi
 !/Treebank.exi
